2014-08-14  James Hunt  <james.hunt@ubuntu.com>

	* init/control.c: Disallow modifying system jobs via SetEnv,
	  UnsetEnv or ResetEnv calls (LP: #1356824).

2014-07-16  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Release 1.13.1

2014-07-16  James Hunt  <james.hunt@ubuntu.com>

	* init/environ.c: environ_remove():
	  - Ensure removed entry is deref'd (LP: #1222705).
	  - Avoid recreating array.
	* init/tests/test_environ.c: test_remove(): Add checks to ensure
	  removed entry freed as expected.

2014-07-11  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Release 1.13

2014-07-09  James Hunt  <james.hunt@ubuntu.com>

	* init/job_process.c: Unhide job_process_error_abort() to allow it to be
	  called by the tests.
	* init/tests/test_job_process.c: RESILIENT_TEST_CHILD(): New macro
	  to work around a bug in NIH's TEST_CHILD() where it doesn't handle
	  EINTR.
	* init/tests/test_job_process.c: test_handler(): New tests to ensure
	  async handling can cope with both 'waitid() before select()' and
	  vice versa:
	  - "with child exit notification before child setup success notification"
	  - "with child exit notification before child setup failure notification"
	  - "with child setup success notification before child exit notification"
	  - "with child setup failure notification before child exit notification"

2014-07-08  James Hunt  <james.hunt@ubuntu.com>

	* init/main.c: main():
	  - Only create inotify watches if not restarting or if performing a
	    stateless re-exec (LP: #1338637).
	* init/job_process.c:
	  - job_process_data_serialise():
	    - Unconditionally toggle CLOEXEC for job_process_fd (LP: #1338968).
	    - Disregard valid flag when toggling CLOEXEC for script_fd since if
	      the JobProcessData still exists, we need the fd to persist across
	      the re-exec.
	  - job_process_data_deserialise(): As above.

2014-07-07  James Hunt  <james.hunt@ubuntu.com>

	* init/tests/test_job_process.c: test_handler():